# opencv

./: CMakeLists.txt
cmake/: OpenCVCompilerOptions.cmake  OpenCVPackaging.cmake
doc/tutorials/introduction/linux_install/: linux_install.markdown
modules/core/include/opencv2/: core.hpp
modules/core/include/opencv2/core/: affine.hpp  base.hpp  bindings_utils.hpp  bufferpool.hpp  check.hpp  core.hpp  cuda.hpp  cuda.inl.hpp  cuda_stream_accessor.hpp  cvstd.hpp  (+28 more)
modules/core/src/: algorithm.cpp  alloc.cpp  arithm.cpp  arithm_core.hpp  arithm_simd.hpp  array.cpp  batch_distance.cpp  bindings_utils.cpp  bufferpool.impl.hpp  channels.cpp  check.cpp  command_line_parser.cpp  conjugate_gradient.cpp  convert.cpp  convert.hpp  convert_c.cpp  convert_scale.cpp  copy.cpp  count_non_zero.cpp  cuda_gpu_mat.cpp  cuda_host_mem.cpp  cuda_info.cpp  cuda_stream.cpp  datastructs.cpp  dct.cpp  directx.cpp  directx.inc.hpp  downhill_simplex.cpp  dxt.cpp  dxt.hpp  dxt_c.cpp  gl_core_3_1.cpp  gl_core_3_1.hpp  glob.cpp  hal_internal.cpp  hal_internal.hpp  hal_replacement.hpp  intel_gpu_gemm.inl.hpp  kmeans.cpp  lapack.cpp  (+56 more)
modules/core/src/utils/: filesystem.cpp
modules/dnn/src/: dnn.cpp  halide_scheduler.cpp  halide_scheduler.hpp  init.cpp  nms.cpp  nms.inl.hpp  op_halide.cpp  op_halide.hpp  op_inf_engine.cpp  op_inf_engine.hpp  precomp.hpp
modules/dnn/src/caffe/: caffe_importer.cpp  caffe_io.cpp  caffe_io.hpp  caffe_shrinker.cpp  glog_emulator.hpp
modules/dnn/src/darknet/: darknet_importer.cpp  darknet_io.cpp  darknet_io.hpp
modules/dnn/src/layers/: batch_norm_layer.cpp  blank_layer.cpp  concat_layer.cpp  convolution_layer.cpp  crop_and_resize_layer.cpp  crop_layer.cpp  detection_output_layer.cpp  elementwise_layers.cpp  eltwise_layer.cpp  flatten_layer.cpp  fully_connected_layer.cpp  layers_common.cpp  layers_common.hpp  layers_common.simd.hpp  lrn_layer.cpp  max_unpooling_layer.cpp  mvn_layer.cpp  normalize_bbox_layer.cpp  padding_layer.cpp  permute_layer.cpp  pooling_layer.cpp  prior_box_layer.cpp  proposal_layer.cpp  recurrent_layers.cpp  region_layer.cpp  reorg_layer.cpp  reshape_layer.cpp  resize_layer.cpp  scale_layer.cpp  shuffle_channel_layer.cpp  slice_layer.cpp  softmax_layer.cpp  split_layer.cpp
modules/dnn/src/onnx/: onnx_importer.cpp
modules/dnn/src/tensorflow/: tf_graph_simplifier.cpp  tf_graph_simplifier.hpp  tf_importer.cpp  tf_io.cpp  tf_io.hpp
modules/dnn/src/torch/: THDiskFile.cpp  THFile.cpp  THGeneral.cpp  torch_importer.cpp
modules/features2d/include/opencv2/: features2d.hpp
modules/features2d/src/: agast.cpp  agast_score.cpp  agast_score.hpp  akaze.cpp  bagofwords.cpp  blobdetector.cpp  brisk.cpp  draw.cpp  dynamic.cpp  evaluation.cpp  fast.avx2.cpp  fast.cpp  fast.hpp  fast_score.cpp  fast_score.hpp  feature2d.cpp  gftt.cpp  hal_replacement.hpp  kaze.cpp  keypoint.cpp  matchers.cpp  mser.cpp  orb.cpp
modules/features2d/src/kaze/: AKAZEFeatures.cpp  KAZEFeatures.cpp  fed.cpp  nldiffusion_functions.cpp
modules/imgcodecs/include/opencv2/: imgcodecs.hpp
modules/imgcodecs/src/: bitstrm.cpp  bitstrm.hpp  exif.cpp  exif.hpp  grfmt_base.cpp  grfmt_base.hpp  grfmt_bmp.cpp  grfmt_bmp.hpp  grfmt_exr.cpp  grfmt_exr.hpp  grfmt_gdal.cpp  grfmt_gdal.hpp  grfmt_gdcm.cpp  grfmt_gdcm.hpp  grfmt_hdr.cpp  grfmt_hdr.hpp  grfmt_jpeg.cpp  grfmt_jpeg.hpp  grfmt_jpeg2000.cpp  grfmt_jpeg2000.hpp  grfmt_pam.cpp  grfmt_pam.hpp  grfmt_pfm.cpp  grfmt_pfm.hpp  grfmt_png.cpp  grfmt_png.hpp  grfmt_pxm.cpp  grfmt_pxm.hpp  grfmt_sunras.cpp  grfmt_sunras.hpp  grfmt_tiff.cpp  grfmt_tiff.hpp  grfmt_webp.cpp  grfmt_webp.hpp  grfmts.hpp  loadsave.cpp  precomp.hpp  rgbe.cpp  rgbe.hpp  utils.cpp  (+1 more)
modules/imgproc/include/opencv2/: imgproc.hpp
modules/imgproc/src/: accum.cpp  accum.dispatch.cpp  accum.simd.hpp  approx.cpp  blend.cpp  canny.cpp  clahe.cpp  color.cpp  color.hpp  color_hsv.cpp  color_lab.cpp  color_rgb.cpp  color_yuv.cpp  colormap.cpp  connectedcomponents.cpp  contours.cpp  convhull.cpp  corner.avx.cpp  corner.cpp  corner.hpp  cornersubpix.cpp  demosaicing.cpp  deriv.cpp  distransform.cpp  drawing.cpp  emd.cpp  featureselect.cpp  filter.avx2.cpp  filter.cpp  filter.hpp  filterengine.hpp  fixedpoint.inl.hpp  floodfill.cpp  gabor.cpp  generalized_hough.cpp  geometry.cpp  grabcut.cpp  hal_replacement.hpp  hershey_fonts.cpp  histogram.cpp  (+31 more)
modules/ml/include/opencv2/: ml.hpp
modules/ml/src/: ann_mlp.cpp  boost.cpp  data.cpp  em.cpp  gbt.cpp  inner_functions.cpp  kdtree.cpp  kdtree.hpp  knearest.cpp  lr.cpp  nbayes.cpp  precomp.hpp  rtrees.cpp  svm.cpp  svmsgd.cpp  testset.cpp  tree.cpp
modules/python/: CMakeLists.txt
modules/python/src2/: detect.py
modules/videoio/: CMakeLists.txt
modules/videoio/cmake/: detect_aravis.cmake  detect_avfoundation.cmake  detect_dc1394.cmake  detect_dshow.cmake  detect_ffmpeg.cmake  detect_gphoto.cmake  detect_gstreamer.cmake  detect_ios.cmake  detect_msdk.cmake  detect_msmf.cmake  detect_openni2.cmake  detect_pvapi.cmake  detect_realsense.cmake  detect_v4l.cmake  detect_ximea.cmake  detect_xine.cmake  init.cmake
modules/videoio/include/opencv2/: videoio.hpp
modules/videoio/src/: cap.cpp  cap_aravis.cpp  cap_cmu.cpp  cap_dc1394.cpp  cap_dc1394_v2.cpp  cap_dshow.cpp  cap_dshow.hpp  cap_ffmpeg.cpp  cap_ffmpeg_api.hpp  cap_ffmpeg_impl.hpp  cap_giganetix.cpp  cap_gphoto2.cpp  cap_gstreamer.cpp  cap_images.cpp  cap_intelperc.cpp  cap_intelperc.hpp  cap_librealsense.cpp  cap_librealsense.hpp  cap_libv4l.cpp  cap_mfx_common.cpp  cap_mfx_common.hpp  cap_mfx_reader.cpp  cap_mfx_reader.hpp  cap_mfx_writer.cpp  cap_mfx_writer.hpp  cap_mjpeg_decoder.cpp  cap_mjpeg_encoder.cpp  cap_msmf.cpp  cap_openni.cpp  cap_openni2.cpp  cap_pvapi.cpp  cap_qt.cpp  cap_unicap.cpp  cap_v4l.cpp  cap_vfw.cpp  cap_winrt_bridge.cpp  cap_winrt_bridge.hpp  cap_winrt_capture.cpp  cap_winrt_capture.hpp  cap_winrt_video.cpp  (+9 more)
modules/videoio/src/cap_winrt/: CaptureFrameGrabber.cpp  CaptureFrameGrabber.hpp  MFIncludes.hpp  MediaSink.hpp  MediaStreamSink.cpp  MediaStreamSink.hpp
modules/world/: CMakeLists.txt
(+102 files in other folders)
